To create the test database:
cd /trunk/database
make
make create
make install

This creates asgard.db3, and puts it in trunk/src.

MapObjectFactory should now be able to create NonPlayerCharacters, Containers, StaticMapObjects, and Tiles (i.e. the four current types of MapObjects).

Release to be in the next few days.

--- a/database/Makefile
+++ b/database/Makefile
@@ -1,5 +1,10 @@
 all:
 	g++ -o runquery sqlite3.cpp -lsqlite3
-run:
-	./runquery test.db test.sql
-	ls -al test.db
+create:
+	./runquery asgard.db3 createdb.sql
+	./runquery asgard.db3 populatedb.sql
+install:
+	mv asgard.db3 ../src
+clean:
+	rm runquery
+	rm asgard.db3
