--- a/database/Makefile
+++ b/database/Makefile
@@ -4,7 +4,7 @@ create:
 	./runquery asgard.db3 createdb.sql
 	./runquery asgard.db3 populatedb.sql
 install:
-	mv asgard.db3 ../src
+	cp asgard.db3 ../src
 clean:
 	rm runquery
 	rm asgard.db3
