MessageRouter works now, with SystemComponents being able to send and receive messages through it.  The Database and Console classes are now SystemComponents.  The console should accept the command: "load boundingbox $x", where $x is an integer.  1, 2, or 3 are valid test cases for $x.  The PrintString message type has been added as well.  When Console receives this message, it will print the parameter for that message to the stdout.  This was added so there would be some textual feedback from the Database syscomp that, in fact, it had loaded the aforementioned bounding box.
There are a few minor issues that will be addressed in 0.3.2.  Please see the
Development section of wiki.asgardrpg.org for more information.

I had need of a number of boost 1.36 features, so I went ahead and upgraded the
code so it could use those features.

--- a/src/sconstruct
+++ b/src/sconstruct
@@ -40,4 +40,4 @@ objects = [
 # Main Target: Build the Full Executable
 # Notice the high level dependencies list in LIBS
 env = Environment(CPPPATH=include_path)
-env.Program('asgard', objects, LIBS=['boost_thread-mt','boost_signals-mt','sqlite3'])
+env.Program('asgard', objects, LIBS=['boost_thread-gcc43-mt-1_36','boost_signals-gcc43-mt-1_36','sqlite3'])
