--- a/src/sconstruct
+++ b/src/sconstruct
@@ -5,11 +5,13 @@ include_path =                     \
     '#/common:'                    \
    +'#/console:'                   \
    +'#/controller:'                \
+   +'#/graphicsEngine:'            \
    +'#/gui:'                       \
    +'#/main:'                      \
    +'#/message:'                   \
    +'#/messageRouter:'             \
-   +'/usr/local/include/boost-1_36'
+   +'/usr/local/include/boost-1_36:'\
+   +'/usr/include/SDL'
  #  +'/usr/include/boost-1_36'      \
 
 # List of Objects to Compile
@@ -37,10 +39,16 @@ objects = [
 './controller/CircHardpoint.cpp',
 './controller/Container.cpp',
 './controller/DesertTile.cpp',
+'./controller/DrawableFactory.cpp',
+'./graphicsEngine/Animation.cpp',
+'./graphicsEngine/Drawable.cpp',
+'./graphicsEngine/Layer.cpp',
+'./graphicsEngine/RectBlitter.cpp',
+'./graphicsEngine/Screen.cpp',
 './main/main.cpp'
 ]
 
 # Main Target: Build the Full Executable
 # Notice the high level dependencies list in LIBS
 env = Environment(CPPPATH=include_path)
-env.Program('asgard', objects, LIBS=['boost_thread-gcc43-mt-1_36','boost_signals-gcc43-mt-1_36','sqlite3'])
+env.Program('asgard', objects, LIBS=['boost_thread-gcc42-mt-1_36','boost_signals-gcc42-mt-1_36','sqlite3','SDL','SDL_image'])
