--- a/src/sconstruct
+++ b/src/sconstruct
@@ -19,7 +19,7 @@ include_path =                     \
 #include_path += '/usr/local/include/boost-1_36'
 
 # Russ's Boost
-include_path += '/usr/local/include/boost-1_39'
+#include_path += '/usr/local/include/boost-1_39'
 
 
 # List of Objects to Compile
@@ -60,9 +60,4 @@ objects = [
 # Notice the high level dependencies list in LIBS
 env = Environment(CPPPATH=include_path)
 
-# Sean's libraries
-#env.Program('asgard', objects, LIBS=['boost_thread-gcc42-mt','boost_signals-gcc42-mt','sqlite3','SDL','SDL_image','python2.6'], CXXFLAGS=['-g'])
-
-# Russ's libaries
 env.Program('asgard', objects, LIBS=['boost_thread-mt','boost_signals-mt','sqlite3','SDL','SDL_image','python2.6'], CXXFLAGS=['-g'])
-
