#NA Various changes made to the build system.  We are now 100% scons as the database/ tree has been scons-ified.  Also, you now build the project from the trunk/ dir.  scons is smart enough to now build and install the database (and clean the database up when running scons -c).  Other minor cleanups made to what was formerly the src/sconstruct file.

--- a/src/sconscript
+++ b/src/sconscript
@@ -2,25 +2,17 @@
 # '#' indicates the directory that scons is executed in.
 # TODO: pkg-config for boost?
 
-# Sean's boost headers
 include_path =                     \
-    '#/common:'                    \
-   +'#/console:'                   \
-   +'#/database:'                  \
-   +'#/graphicsEngine:'            \
-   +'#/gui:'                       \
-   +'#/main:'                      \
-   +'#/message:'                   \
-   +'#/messageRouter:'             \
+    '#/src/common:'                \
+   +'#/src/console:'               \
+   +'#/src/database:'              \
+   +'#/src/graphicsEngine:'        \
+   +'#/src/gui:'                   \
+   +'#/src/main:'                  \
+   +'#/src/message:'               \
+   +'#/src/messageRouter:'         \
    +'/usr/include/SDL:'            \
    +'/usr/include/python2.6:'
-
-# Sean's Boost
-#include_path += '/usr/local/include/boost-1_36'
-
-# Russ's Boost
-#include_path += '/usr/local/include/boost-1_39'
-
 
 # List of Objects to Compile
 objects = [
@@ -60,4 +52,4 @@ objects = [
 # Notice the high level dependencies list in LIBS
 env = Environment(CPPPATH=include_path)
 
-env.Program('asgard', objects, LIBS=['boost_thread-mt','boost_signals-mt','sqlite3','SDL','SDL_image','python2.6'], CXXFLAGS=['-g'])
+env.Program('../asgard', objects, LIBS=['boost_thread-mt','boost_signals-mt','sqlite3','SDL','SDL_image','python2.6'], CXXFLAGS=['-g'])
