Adding Google Logger (glog) support so we can have some much needed debug output.  I've not been able to discern whether glog is by-default threadsafe.  If it turns out not to be, we should be able to use glog/raw_logging.h instead of glog/logging.h for thread safety.  Lets use it a bit and see what happens.

--- a/src/sconscript
+++ b/src/sconscript
@@ -56,4 +56,4 @@ objects = [
 # Notice the high level dependencies list in LIBS
 env = Environment(CPPPATH=include_path)
 
-env.Program('../asgard', objects, LIBS=['boost_thread-mt','boost_signals-mt','sqlite3','SDL','SDL_image','python2.6'], CXXFLAGS=['-g'])
+env.Program('../asgard', objects, LIBS=['boost_thread-mt','boost_signals-mt','sqlite3','SDL','SDL_image','python2.6', 'glog'], CXXFLAGS=['-g'])
