Removing ASGARD_DATABASE constant.  Use Database::getDatabasePath() to retrieve the expected path to the database.  getDatabasePath() uses RES from consts.h to know the root directory of Asgard's resources.

--- a/database/sconscript
+++ b/database/sconscript
@@ -11,7 +11,7 @@ source = [
    'createdb.sql',
    'populatedb.sql'
 ]
-target = '../asgard.db3'
+target = './asgard.db3'
 create = './database/runquery $TARGET ./database/createdb.sql';
 populate = './database/runquery $TARGET ./database/populatedb.sql';
 
