Setting 'Section' field of Debian control file to 'games'.

--- a/package/deb/DEBIAN/control
+++ b/package/deb/DEBIAN/control
@@ -3,7 +3,7 @@ Version: 0.3.6-1
 Architecture: i386
 Maintainer: Russ Adams <russ.adams@gmail.com>
 Installed-Size: 40
-Section: unknown
+Section: games
 Priority: extra
 Homepage: http://wiki.asgardrpg.org/
 Description: classic, epic video roleplaying game
