Adding SpriteSheetCache.  SpriteSheetCache is now responsible for loading sprite sheets into memory from hard disk.  Once loaded, SpriteSheetCache stores them in an std::map.  If a sprite sheet is already in the cache, SpriteSheetCache will return the pre-existing instance rather than load from HD.  SpriteSheetCache's destructor will free any SDL_Surfaces in the cache when called.

--- a/src/sconscript
+++ b/src/sconscript
@@ -49,6 +49,7 @@ objects = [
 './graphicsEngine/Layer.cpp',
 './graphicsEngine/RectBlitter.cpp',
 './graphicsEngine/Screen.cpp',
+'./graphicsEngine/SpriteSheetCache.cpp',
 './map/Map.cpp',
 #'./database/test.cpp'
 #'./graphicsEngine/test.cpp'
