--- a/package/debian/control
+++ b/package/debian/control
@@ -2,7 +2,7 @@ Source: asgard
 Section: games
 Priority: extra
 Maintainer: Russ Adams <russ.adams@gmail.com>
-Build-Depends: debhelper (>= 8.0.0)
+Build-Depends: debhelper (>= 8.0.0), cdbs, scons
 Standards-Version: 3.9.2
 Homepage: http://wiki.asgardrpg.org
 
