--- a/package/debian/control
+++ b/package/debian/control
@@ -2,7 +2,7 @@ Source: asgard
 Section: games
 Priority: extra
 Maintainer: Russ Adams <russ.adams@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), cdbs, scons, libboost-thread-dev, libboost-signals-dev, libsdl1.2-dev, libsdl1.2-image-dev, python2.6-dev
+Build-Depends: debhelper (>= 8.0.0), cdbs, scons, libboost-thread-dev, libboost-signals-dev, libsdl1.2-dev, libsdl-image1.2-dev, python2.6-dev
 Standards-Version: 3.9.2
 Homepage: http://wiki.asgardrpg.org
 
