Asgard's startup process has now been internalized into a class called 'Asgard'.  main() has been greatly simplified.

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -21,6 +21,7 @@ include_path =                     \
 # List of Objects to Compile
 objects = [
 './console/Console.cpp',
+'./console/ConsolePython.cpp',
 './database/QueryGenerator.cpp',
 './database/GrassTile.cpp',
 './database/RowSet.cpp',
@@ -46,6 +47,7 @@ objects = [
 './graphicsEngine/Screen.cpp',
 './graphicsEngine/SpriteSheetCache.cpp',
 './map/Map.cpp',
+'./common/Asgard.cpp',
 #'./database/test.cpp'
 #'./graphicsEngine/test.cpp'
 './main/main.cpp'
