Adding MobileMapObject as a subclass of StaticMapObject.  Adding stub for move() function of MobileMapObject.  See comments for more juicy details.

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -27,6 +27,7 @@ objects = [
 './database/StaticMapObject.cpp',
 './database/Coordinate.cpp',
 './database/MapObject.cpp',
+'./database/MobileMapObject.cpp',
 './database/NonPlayerCharacter.cpp',
 './database/WaterTile.cpp',
 './database/Item.cpp',
