Adding EventHandler::fireEvent() which is able to stick an Asgard event (SDL calls these User Defined Events) into the SDL Event Queue.  Also, I've added a new enumeration which lists the various Asgard Event Codes.  See AsgardEvent.h

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -44,6 +44,7 @@ objects = [
 './graphicsEngine/Screen.cpp',
 './graphicsEngine/SpriteSheetCache.cpp',
 './map/Map.cpp',
+'./common/EventHandler.cpp',
 './common/Asgard.cpp',
 #'./database/test.cpp'
 #'./graphicsEngine/test.cpp'
