--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -51,5 +51,5 @@ objects = [
 './main/main.cpp'
 ]
 
-asgard = env.Program('../asgard', objects, CPPPATH=include_path, LIBS=['boost_thread-mt','sqlite3','SDL','SDL_image','python2.7', 'glog'], CXXFLAGS=['-Wall', '-O2', '-g'])
+asgard = env.Program('../asgard', objects, CPPPATH=include_path, LIBS=['boost_thread-mt','sqlite3','SDL','SDL_image','python2.7', 'glog'], CXXFLAGS=['-Wall', '-O2'])
 Export("asgard")
