Adding some test cases to exercise the model classes; namely Inventory and Item.

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -50,6 +50,7 @@ objects = [
 './common/Asgard.cpp',
 #'./database/test.cpp'
 #'./graphicsEngine/test.cpp'
+#'./model/test.cpp'
 './main/main.cpp'
 ]
 
