Asgard can be successfully compiled with clang++.  Adding line to sconstruct, commented out by default.  We may using clang++ as a default compiler soon. It's a good bit faster than g++.

--- a/distro/sconstruct
+++ b/distro/sconstruct
@@ -19,7 +19,8 @@ AddOption(
 )
 
 # Build the environment and export it for child sconscripts
-env = Environment(PREFIX = GetOption('prefix'))
+#env = Environment(PREFIX = GetOption('prefix'), CXX='clang++')
+env = Environment(PREFIX = GetOption('prefix'), CXX='g++')
 Export('env')
 
 # Child conscripts
