--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -37,6 +37,9 @@ objects = [
 './database/DesertTile.cpp',
 './database/Tile.cpp',
 './database/DrawableFactory.cpp',
+'./database/AnimationInteraction.cpp',
+'./database/ItemInteraction.cpp',
+'./database/DialogInteraction.cpp',
 './graphicsEngine/GraphicsEngine.cpp',
 './graphicsEngine/Animation.cpp',
 './graphicsEngine/Drawable.cpp',
