Interactionpoint.h, RectInteractionpoint, CircInteractionpoint: -Added boolean member requiresMouseClick for Interactionpoints that will only allow a MapObject to handle its Interactions if the user clicks within the Interactionpoint of a MapObject.  Added appropriate mutator and accessor methods.  Modified constructors to include the new member as a parameter.
Database:
-Added boolean column requiresMouseClick to Interactionpoints table.

DatabaseColumnMap.h:
-Added enumeration for selections from Interactionpoints table.

QueryGenerator:
-Added query method interactionpoint() for selecting from Interactionpoints table.

MapObjectFactory:
-Added methods loadInteractionpoints() and createInteractionpoints().
-Modified to ensure that Hardpoints, Interactionpoints, and Interactions are loaded and created for Containers, NPCs, and MapObjects.

MapObject:
-Added vector of Interactionpoint pointers as member.
-Added addInteractionpoint() method for inserting pointers to Interactionpoints into vector.

sconscript:
-Modified to compile RectInteractionpoint.cpp and CircInteractionpoint.cpp.

Still need to test for successful compilation and whether or not Interactionpoints are being loaded from the database and added to MapObjects.

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -40,6 +40,8 @@ objects = [
 './database/AnimationInteraction.cpp',
 './database/ItemInteraction.cpp',
 './database/DialogInteraction.cpp',
+'./database/RectInteractionpoint.cpp',
+'./database/CircInteractionpoint.cpp',
 './graphicsEngine/GraphicsEngine.cpp',
 './graphicsEngine/Animation.cpp',
 './graphicsEngine/Drawable.cpp',
