Adding ResourceLoader class to load images (and later sound).  Initial use case for this class is to load images for SpriteSheetCache and Theme.

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -47,6 +47,7 @@ objects = [
 './gui/Box.cpp',
 './gui/GuiFactory.cpp',
 './gui/Dialog.cpp',
+'./gui/ResourceLoader.cpp',
 './gui/Theme.cpp',
 './map/Map.cpp',
 './model/Inventory.cpp',
