Adding, but not using just yet, a GamerInventory class.  Is singleton and extends Inventory.

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -54,6 +54,7 @@ objects = [
 './gui/Dialog.cpp',
 './gui/Theme.cpp',
 './map/Map.cpp',
+'./model/GamerInventory.cpp',
 './model/Inventory.cpp',
 './model/Item.cpp',
 './common/EventHandler.cpp',
