Revert "Disabling Google Logs (glog).  Be sure to reverse this commit should we find ourselves in a position to use it again."
This reverts commit cda463e8db64599f2c6e49d1455663339c1524b9.

Conflicts:
	distro/src/sconscript

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -71,5 +71,5 @@ if ARGUMENTS.get('VERBOSE') != "1":
 
 # Use this for FreeBSD and Boost 1.52, where boost_thread-mt has been consolidated into boost_thread
 #asgard = env.Program('../asgard', objects, CPPPATH=include_path, LIBS=['boost_thread','sqlite3','SDL','SDL_image','SDL_ttf','python2.7'], CXXFLAGS=['-Wall', '-O2'])
-asgard = env.Program('../asgard', objects, CPPPATH=include_path, LIBS=['boost_thread-mt','sqlite3','SDL','SDL_image','SDL_ttf','python2.7'], CXXFLAGS=['-Wall', '-O2'])
+asgard = env.Program('../asgard', objects, CPPPATH=include_path, LIBS=['boost_thread-mt','sqlite3','SDL','SDL_image','SDL_ttf','python2.7','glog'], CXXFLAGS=['-Wall', '-O2'])
 Export("asgard")
