Adding an SDLSurfaceDeleter.
This class is needed to delete SDL_Surface*'s.  Why?  Because
SDL_Surfaces are freed using SDL_FreeSurface.  Merely deleting
SDL_Surfaces will not actually free their memory.  This
SDLSurfaceDeleter tells std::unique_ptr and std::shared_ptr how to free
the SDL_Surface.

--- a/distro/src/sconscript
+++ b/distro/src/sconscript
@@ -47,6 +47,7 @@ objects = [
 './graphicsEngine/Layer.cpp',
 './graphicsEngine/RectBlitter.cpp',
 './graphicsEngine/Screen.cpp',
+'./graphicsEngine/SDLSurfaceDeleter.cpp',
 './gui/Box.cpp',
 './gui/GuiFactory.cpp',
 './gui/Dialog.cpp',
